--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "@radix-ui/themes": "^3.1.4",
     "antd": "^5.21.5",
     "autoprefixer": "^10.4.20",
+    "dayjs": "^1.11.13",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
+    "recoil": "^0.7.7",
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
